@@ -1,0 +1,55 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.hadoop.util;
+
+import java.io.*;
+import javax.servlet.*;
+
+public class ServletUtil {
+  /**
+   * Initial HTML header
+   */
+  public static PrintWriter initHTML(ServletResponse response, String title
+      ) throws IOException {
+    response.setContentType("text/html");
+    PrintWriter out = response.getWriter();
+    out.println("<html>\n"
+        + "<link rel='stylesheet' type='text/css' href='/static/hadoop.css'>\n"
+        + "<title>" + title + "</title>\n"
+        + "<body>\n"
+        + "<h1>" + title + "</h1>\n");
+    return out;
+  }
+
+  /**
+   * Get a parameter from a ServletRequest.
+   * Return null if the parameter contains only white spaces.
+   */
+  public static String getParameter(ServletRequest request, String name) {
+    String s = request.getParameter(name);
+    if (s == null) {
+      return null;
+    }
+    s = s.trim();
+    return s.length() == 0? null: s;
+  }
+
+  public static final String HTML_TAIL = "<hr />\n"
+    + "<a href='http://lucene.apache.org/hadoop'>Hadoop</a>, 2007.\n"
+    + "</body></html>";
+}
